--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="/">Note Taker </a>
-      <div class="icons">
+      <div class="icons" id="Icon">
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
       </div>
@@ -34,16 +34,16 @@
           </div>
         </div>
         <div class="col-8">
-          <input
+          <input id="titleNote"
             class="note-title"
             placeholder="Note Title"
             maxlength="28"
             type="text"
-          />
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          /> 
+          <textarea class="note-textarea" id="textNote" placeholder="Note Text"></textarea>
         </div>
       </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
